--- a/src/app/routes/user/list/list.component.html
+++ b/src/app/routes/user/list/list.component.html
@@ -4,6 +4,13 @@
   </ng-template>
 </page-header>
 <nz-card>
-  <sf mode="search" [schema]="searchSchema" (formSubmit)="st.reset($event)" (formReset)="st.reset($event)"></sf>
-  <simple-table #st [data]="url" [columns]="columns"></simple-table>
+
+  <sf mode="search" [schema]="searchSchema" (formSubmit)="st.reset($event)" (formReset)="st.reset($event)"  [layout]="'vertical'"></sf>
+  <simple-table #st [data]="url" [columns]="columns"
+                [zeroIndexedOnPage]="true"
+                [reqReName]="{pi:'page',ps:'size'}"
+                [resReName]="{total:'data.totalElements',list: 'data.content' }"
+                [ps]="15" [pi]="0"
+                [extraParams]="reqParams">
+  </simple-table>
 </nz-card>
